<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="display">New York Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="date">Select Date</string>
    <string name="sortOrder">Sort Order:</string>
    <string name="newsDeskValues">News Desk Values:</string>
    <string name="arts">Arts</string>
    <string name="fashionAndStyle"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="beginDate">Begin Date:</string>
    <string name="submit">Submit</string>
    <string name="selectDate">Begin Date:</string>
    <string name="dateHint">mm/dd/yy</string>
    <string name="sortOrder_prompt">Select...</string>
    <string-array name="sortOrder_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="calligraphy">fonts/Kingthings_Calligraphica_2.ttf</string>
</resources>
